# src/v1/routers/booksManage.routes.js
@@ -1,11 +1,13 @@
 const { Router } = require('express')
 const router = Router()
 const verifyToken = require('../../middleware/verifyToken.js')
-const { createBooks, getBooksAlls } = require('../../controller/books.controller.js')
+const { createBooks, getBooksAlls, getOneBook, updateBook, deleteBook } = require('../../controller/books.controller.js')
 
 router
     .post('/createBook', verifyToken, createBooks)
     .get('/', getBooksAlls)
-
+    .get('/:id', getOneBook)
+    .put("/updateBook/:id", verifyToken, updateBook)
+    .delete("/deleteBook/:id", verifyToken, deleteBook)
 
 module.exports = router
